Upgraded to JDK 21 + refactored code